--- a/css/bid-page.css
+++ b/css/bid-page.css
@@ -23,16 +23,54 @@ body{
 
 .images_display{
     width: 45%;
-    margin: 30px 0;
-    text-align: center;
+    /* height: 100vh; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* text-align: center; */
     
+}
+
+.slider{
+    position: relative;
 }
 
 .images_display img{
     width: 100%;
     height: 100%;
+    border-radius: 5px;
     margin-bottom: 10px;
+    margin-top: 10px;
 }
+
+.chev{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+}
+
+#change{
+    background: none;
+    outline: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+}
+
+#change i{
+    font-size: 25px;
+}
+
+#change:hover{
+    color: rgb(122, 15, 15)
+}
+
 
 .bid_details {
     display: block;
@@ -131,3 +169,35 @@ body{
 .fa-solid{
     cursor: pointer;
 }
+
+@media screen and (max-width:768px) {
+    .container {
+        display: block;
+        width: 100%;  
+    }
+    .images_display{
+        width: 90%;
+        margin:auto;
+        /* margin-top: 70px;
+        text-align: center;
+        align-items: center; */
+    }
+    .images_display img{
+        margin-top: 30px;
+    }
+
+    .bid_details {
+        width: 100%;
+        margin: auto;
+        text-align: center;
+    }
+
+    .details2 {
+        width: 80%;
+        margin: auto;
+    }
+
+    .new{
+        margin-top: 10px;
+    }
+}   
