Another set of amendments

--- a/css/auction.css
+++ b/css/auction.css
@@ -39,7 +39,7 @@ body{
 }
 .img-group img{
    width: 350px;
-   height: 250;
+   height: 250px;
    margin: .4rem;
    min-width: none;
    border-radius: 12px;
