--- a/css/login.css
+++ b/css/login.css
@@ -174,6 +174,28 @@ body{
     height: 13px;
 }
 
+#errormsg.shaking{
+    text-align: center;
+    color: #ff3860;
+    animation: shake 0.5s 15;
+    /* animation-iteration-count: 5; */
+    
+}
+
+#errormsg{
+    text-align: center;
+    color: #ff3860;
+    
+}
+
+@keyframes shake{
+    0% { transform: translateX(0); }
+    25% { transform: translateX(-5px); }
+    50% { transform: translateX(5px); }
+    75% { transform: translateX(-5px); }
+    100% { transform: translateX(5px); }
+}
+
 .remember-forgot a{
     color: #e4e4e4;
     text-decoration: none;
