--- a/css/auction.css
+++ b/css/auction.css
@@ -19,7 +19,7 @@ body{
 .item-wrapper{
     display: block;
     width: 100%;
-    max-width: 468px;
+    /* max-width: 468px; */
     align-items: center;
     text-align: center;
     margin-top: 7.5rem
