--- a/css/login.css
+++ b/css/login.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Crimson+Pro");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 *{
     margin: 0;
     padding: 0;
@@ -177,7 +178,7 @@ body{
 #errormsg.shaking{
     text-align: center;
     color: #ff3860;
-    animation: shake 0.5s 15;
+    animation: shake 0.3s 16;
     /* animation-iteration-count: 5; */
     
 }
