--- a/css/auctionstatus.css
+++ b/css/auctionstatus.css
@@ -12,7 +12,7 @@
 
 .main{
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,7 +22,7 @@
 
 .head{
     text-align: center;
-    margin-top: 100px;
+    margin-top: 150px;
 }
 
 .head_1{
